# CelestialVault

./: .gitignore  README.md  __init__.py  common_classes.py  common_functions.py  common_functions.py.bak  find_differ.py  my_thread.py  pyproject.toml  pytest.ini  report.md  requirements.txt  setup.py  value_dispatch.py
bench/: bench_scan.py
constants/: __init__.py  constant.py  pi_digit.py  style_parameters.py  suffers.py  suffix.py
docs/: __init__.md
docs/constants/: __init__.md  constant.md  image_format.md  pi_digit.md  regex_patterns.md  style_parameters.md  suffix.md
docs/instances/: __init__.md  inst_error.md  inst_fetch.md  inst_findiff.md  inst_imgcodecs.md  inst_network.md  inst_parse.md  inst_quiz.md  inst_save.md  inst_sub.md  inst_symmetric.md  inst_units.md
docs/instances/inst_file/: __init__.md  file_diff.md  file_node.md  file_tree.md  file_util.md
docs/tools/: AudioProcessing.md  DocumentConversion.md  FileOperations.md  ImageProcessing.md  ListDictTools.md  NumberUtils.md  README.md  SampleGenerate.md  TextTools.md  Utilities.md  VideoProcessing.md  __init__.md
examples/: value_dispatch.py  常用工具.ipynb
experiments/: experiment_ImageProcessing.py  experiment_NumberUtils.py  experiment_imgcodecs.py  experiment_symmetric.py  experiments.ipynb
instances/: README.md  __init__.py  inst_error.py  inst_fetch.py  inst_findiff.py  inst_imgEncoder.py  inst_network.py  inst_parse.py  inst_progress.py  inst_queue.py  inst_quiz.py  inst_save.py  inst_sub.py  inst_task.py  inst_taskchain.py  inst_taskmanage.py  my_thread.py  task_chain.py  task_manager.py
instances/inst_task/: README.md  __init__.py  task_chain.py  task_manage.py  task_nodes.py  task_progress.py  task_splitter.py  task_support.py  task_tree.py
my_spider/: __init__.py
my_spider/concurrent/: threads_pool.py
my_spider/concurrent/threads_inst/: fetch.py  parse.py
my_spider/instances/: __init__.py  inst_save.py
my_spider/utilities/: __init__.py  util_config.py  util_frame.py
src/: __init__.py
src/celestialvault/: __init__.py
src/celestialvault/constants/: __init__.py  constant.py  image_format.py  pi_digit.py  regex_patterns.py  style_parameters.py  suffix.py
src/celestialvault/instances/: __init__.py  inst_error.py  inst_fetch.py  inst_file.py  inst_findiff.py  inst_imgEncoder.py  inst_img_codecs.py  inst_imgcodecs.py  inst_network.py  inst_parse.py  inst_quiz.py  inst_save.py  inst_sub.py  inst_symmetric.py  inst_units.py
src/celestialvault/instances/inst_file/: __init__.py  file_diff.py  file_node.py  file_tree.py  file_util.py
src/celestialvault/instances/inst_task/: README.md  __init__.py  task_manage.py  task_nodes.py  task_progress.py  task_support.py  task_tools.py  task_tree.py  task_web.py
src/celestialvault/instances/inst_task/static/: base.css  dashboard.css  errors.css  inject.css  style.css  task_injection.js  task_web.js
src/celestialvault/instances/inst_task/static/css/: base.css  dashboard.css  inject.css
src/celestialvault/instances/inst_task/templates/: index.html
src/celestialvault/tools/: AudioProcessing.py  DocumentConversion.py  FileOperations.py  ImageProcessing.py  ListDictTools.py  NumberUtils.py  README.md  SampleGenerate.py  TextTools.py  Utilities.py  VideoProcessing.py  __init__.py
src/constants/: __init__.py  regex_patterns.py  suffers.py
src/instances/: __init__.py  inst_fetch.py  inst_imgEncoder.py  inst_queue.py  inst_save.py  inst_sub.py  my_thread.py
src/tools/: DocumentConversion.py  FileOperations.py  ImageProcessing.py  ListDictTools.py  TextTools.py  Utilities.py  VideoProcessing.py
tests/: _preview.ipynb  conftest.py  preview_porssvideo.ipynb  test.txt  test_FileOperations.py  test_ImageProcessing.py  test_ListDictTools.py  test_NumberUtils.py  test_TextTools.py  test_Utilities.py  test_file.py  test_findiff.py  test_imgEncoder.py  test_img_codecs.py  test_imgcodecs.py  test_instances.py  test_logger.py  test_parse.py  test_perf_compare.py  test_queue_perf.py  test_save.py  test_suber.py  test_symmetric.py  test_task.py  test_thread.py  test_tools.py  test_units.py  常用工具.ipynb
tools/: DocumentConversion.py  FileOperations.py  ImageProcessing.py  ListDictTools.py  NumberUtils.py  README.md  SampleGenerate.py  TextTools.py  Utilities.py  VideoProcessing.py  __init__.py
utilities/: __init__.py  common_functions.py  util_findiff.py  util_sub.py
version/: common_functions(1.02).py  common_functions（1.01）.py  constant(1.01).py  find_differ(1.04).py  find_differ(2.00).py  find_differ(2.01)(7_29).py  my_thread(1.5)(7_26).py  my_thread(1.60)(7_28).py  my_thread(2.00)(7_30).py  my_thread(7_26).py
