[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CelestialVault"
version = "1.0.1"
description = "A Python package for managing celestial data."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Mr.Xiaotian", email = "mingxiaomingtian@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "mpmath>=1.3",
    "regex>=2023.0",
    "bidict>=0.22",
    "reedsolo>=1.7",
    "charset-normalizer>=3.3",
    "jieba>=0.42",
    "pillow>=10.0",
    "pillow-heif>=0.15",
    "rarfile>=4.1",
    "py7zr>=0.20",
    "httpx>=0.27",
    "requests>=2.32",
    "tqdm>=4.66",
    "loguru>=0.7",
    "networkx>=3.2",
    "beautifulsoup4>=4.12",
    "matplotlib>=3.9",
    "celestialflow>=3.1.4"
]

[project.urls]
Homepage = "https://github.com/Mr-xiaotian/CelestialVault"
Repository = "https://github.com/Mr-xiaotian/CelestialVault"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]