[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "celestialvault"
version = "1.0.1"
description = "A Python package for managing celestial data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mr.Xiaotian", email = "mingxiaomingtian@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "mpmath>=1.3",
  "regex>=2023.0",
  "bidict>=0.22",
  "reedsolo>=1.7",
  "charset-normalizer>=3.3",
  "pillow>=10.0",
  "pillow-heif>=0.15",
  "rarfile>=4.1",
  "py7zr>=0.20",
  "httpx>=0.27",
  "requests>=2.32",
  "tqdm>=4.66",
  "beautifulsoup4>=4.12",
  "matplotlib>=3.9.1",
  "wcwidth>=0.2",
  "celestialflow",
  "scikit-image>=0.24",
  "scipy>=1.13",
  "pydub>=0.25",
  "moviepy>=1.0",
  "ffmpeg-python>=0.2",
  "PyMuPDF>=1.24",
  "PyPDF2>=3.0",
  "ipywidgets>=8.1",
  "ipython>=8.0"
]

[tool.uv.sources]
celestialflow = { path = "D:/Project/CelestialFlow" }

[project.optional-dependencies]
dev = ["pytest>=8.0", "loguru>=0.7"]

[project.urls]
Homepage = "https://github.com/Mr-xiaotian/CelestialVault"
Repository = "https://github.com/Mr-xiaotian/CelestialVault"

[tool.poetry]
packages = [{ include = "celestialvault", from = "src" }]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff",
    "pyright>=1.1.409",
]

[tool.pyright]
include = ["src"]
ignore = ["tests", "**/tests/**", "typings", "demo", "bench", "experiments", "examples", "temp"]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportReturnType = "none"
reportMissingImports = "none"

[tool.ruff]
target-version = "py312"
exclude = ["tests", "typings", "demo", "bench", "experiments", "examples", "temp"]

[tool.ruff.lint]
select = [
    "E", "F",      # pycodestyle errors + pyflakes
    "I",           # isort (import order)
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "SIM",         # flake8-simplify
    "C4",          # flake8-comprehensions
    "RUF",         # ruff-specific rules
]
ignore = [
    "E501",        # line too long（交给 formatter）
    "RUF001",      # 字符串内 Unicode 字符（中文内容）
    "RUF002",      # 中文标点（项目使用中文 docstring）
    "RUF003",      # 中文注释标点
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
